test/fail/basic_syntax/unterminated_single_line_if.lly
#[
SyntaxError: Unexpected token 'end of file'.
    from unterminated_single_line_if.lly:6:
]#

if 1:
